# encode-template

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  pre_prompt.py
{{cookiecutter.project_name}}/: .gitignore  .prettierrc  example_S01E01.py  pyproject.toml  {{cookiecutter.project_slug}}_S01E01.py
{{cookiecutter.project_name}}/.scripts/: get_vsjet_latest.py  vsjet_latest.py
{{cookiecutter.project_name}}/_settings/: x265_settings
{{cookiecutter.project_name}}/boilerplate/: __init__.py  boilerplate.py  index.py  logger.py  run.py  scriptinfo.py
{{cookiecutter.project_name}}/filterchain/: __init__.py  chain.py
